# ring-for-the-web

./: .gitignore  .gitmodules  README.md
Add-ons/Extension/Chrome-NaCl/: index.html  manifest.json  ring.js
Add-ons/Extension/XPCOM/: README.md
Add-ons/Extension/XPCOM/ringdemo/: Makefile.in
Add-ons/Extensions/Chrome-NaCl/: Makefile  README.md  ring.nmf
Add-ons/Extensions/Chrome-NaCl/src/: ring.cc
Add-ons/Extensions/XPCOM/ringdemo/: install.rdf
Add-ons/Extensions/XPCOM/ringdemo/public/: Makefile.in
Add-ons/Extensions/XPCOM/ringdemo/src/: Makefile.in
Add-ons/Extensions/XPCOM/xpcom-sample/src/: Makefile
Add-ons/WebExtensions/Emscripten/: README.md
Add-ons/WebExtensions/RingDemo/: README.md  icons  manifest.json
Add-ons/WebExtensions/RingDemo/popup/: contacts.css  contacts.html
Add-ons/chrome-extension/: README.md  hello_tutorial.bc  hello_tutorial.pexe  manifest.json  nacl.js  popup.html
Server/Cpp/: README.md
Server/Cpp/Bootstrap/: README.md
Server/Cpp/Bootstrap/http-parser/: Makefile  README.md  main.cpp  parserHTTP.cpp  parserHTTP.hpp
Server/Cpp/Bootstrap/http-parser/tests/: request1.txt  request2.txt
Server/Cpp/Bootstrap/ring-rest/: CMakeLists.txt  README.md  configure.ac
Server/Cpp/Bootstrap/ring-rest/cmake/: CMakeLists.txt  FindRing.cmake  filemake
Server/Cpp/Bootstrap/ring-rest/include/: connection.hpp  manager.hpp  parserHTTP.hpp  router.hpp  server.hpp
Server/Cpp/Bootstrap/ring-rest/src/: Makefile  Makefile.am  Makefile.in  connection.hpp  http_status.hpp  main.cpp  parserHTTP.cpp  response.cpp  response.hpp  router.cpp  router.hpp  server.hpp
Server/Cpp/Bootstrap/ring-rest/src/.deps/: ring_http-main.Po  ring_http-parserHTTP.Po  ring_http-response.Po  ring_http-router.Po
Server/Cpp/Restbed/examples/: Makefile  simple.cpp
Server/Cpp/Restbed/ring-restbed/: Makefile  main.cpp  ringrestbed.cpp  ringrestbed.h
Server/Cpp/cpp-httplib/: Makefile  main.cpp
Server/Cpp/cpr/: Makefile  keepalive.cpp
Server/Cpp/ring-rest/: CMakeLists.txt  README.md  main.cpp  server.hpp
Server/Cpp/ring-rest/include/: .connection.hpp.swp  .server.hpp.swp
Server/Cpp/ring-rest/src/: .connection.cpp.swp  .main.cpp.swp
Server/Go/: README.md
Server/Go/dynamic-lib/c-adder/: build  main
Server/Go/dynamic-lib/c-example/: build
Server/Go/dynamic-lib/cpp-server/: Makefile  build.sh  error_to_solve
Server/Go/dynamic-lib/cpp-server/server/: Makefile  server.go  server.h
Server/Go/dynamic-lib/ring-demo/: Makefile  setup.sh
Server/Go/dynamic-lib/ring-demo/daemon/: Makefile  daemon.cpp  daemon.h  package.go  server.h
Server/Go/dynamic-lib/ring-demo/server/: Makefile  server.go  server.h
Server/Go/ring-demo/: README.md  server.go
Server/Go/ring-demo/daemon/: daemon.cxx  daemon.hxx  daemon.swigcxx
Server/Go/shared/c-adder/: main.c  sum.go
Server/Go/shared/cpp-server/: main.cxx  run.sh
Server/Go/shared/cpp-server/server/: server.go  server.h
Server/Go/shared/ring-demo/: run.sh
Server/Go/shared/ring-demo/server/: server.go
Server/Go/web-go-cpp/daemon/: daemon.cpp
Server/Go/wrapper/ring-web/: setup.sh
Server/Go/wrapper/ring-web/daemon/: daemon.h
Server/Go/wrapper/web-go-cpp/: server.go
Server/Go/wrapper/web-go-cpp/daemon/: daemon.cpp  daemon.h
Server/Nodejs/: README.md
Server/Nodejs/examples/hello/: binding.gyp  hello.cpp
Server/Nodejs/examples/hello/public/: index.js
Server/Nodejs/hello/: hello.js  package.json
Server/Nodejs/ring-demo/: README.md  index.html  server.js  wring.cpp
Server/Nodejs/wrapper/ring-demo/: README.md  binding.gyp  server.js
Server/Python/: README.md
Server/Python/cpp-examples/c-api/math/: mymath.py
Server/Python/cpp-interactions/: print-pytime.cpp
Server/Python/examples/c-api/math/: Makefile  main.cpp
Server/Python/examples/cython/simple-wrapper/: Makefile  dring.pyx  setup.py  test.sh
Server/Python/ring-rest/c-api/: Makefile  bridge.cpp
Server/Python/ring-rest/cython/: Makefile  bottle_server.py  flask_server.py  main.cpp
Server/Python/ring-rest/cython/api/: user.py
Server/Python/ring-rest/cython/requirements/: flask.txt
Server/Python/shared/ring-rest-py/: Makefile  README.md  main.cpp  pyserver.cpp  pyserver.h
Server/Python/static/c-api-swig/: Makefile  daemon.h  pyserver.cpp
Server/Python/static/cython/: daemon.h
Server/Python/static/ring-rest-py/: README.md  daemon.cpp  main.cpp
Server/Python/wrapper/c-api-swig/: TODO  daemon.i
Server/Python/wrapper/cython/: Makefile  README.md  daemon.cpp  daemon_cpp.pyx  dring.pyx  dring_cpp.pxd  server.py  setup.py  test.sh
Server/Python/wrapper/cython/pxd/: configurationmanager_interface.pxd  dring.pxd
